--- a/setting.html
+++ b/setting.html
@@ -390,15 +390,14 @@ Bootstrap 5 Dashboard Admin Template
                     <footer class="site-footer">
                         <div class="container">
                             <div class="row">
-                                
                                 <div class="col-lg-12 col-12">
-                                    <p class="copyright-text">Copyright © Mini Finance 2048 
-                                    - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Tooplate</a></p>
+                                    <p class="copyright-text">
+                                        Mini Finance v1.0 — Deployed on 03 Sep 2025 — By Egwu Vincent Oko
+                                    </p>
                                 </div>
-
                             </div>
                         </div>
-                    </footer>
+                    </footer>    
                 </main>
 
             </div>
