--- a/index.html
+++ b/index.html
@@ -577,18 +577,26 @@ Bootstrap 5 Dashboard Admin Template
 
                         </div>
                     </div>
-
                     <footer class="site-footer">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12 col-12">
                                     <p class="copyright-text">
-                                        Mini Finance v1.0 — Deployed on 03 Sep 2025 — By Egwu Vincent Oko
+                                        Mini Finance v1.0 — Deployed on <span id="deploy-date"></span> — By Egwu Vincent Oko
                                     </p>
                                 </div>
                             </div>
                         </div>
                     </footer>
+                    <script>
+                        // Dynamically set deployment date in DD Mon YYYY format
+                        const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+                        const now = new Date();
+                        const day = String(now.getDate()).padStart(2, '0');
+                        const month = months[now.getMonth()];
+                        const year = now.getFullYear();
+                        document.getElementById('deploy-date').textContent = `${day} ${month} ${year}`;
+                    </script>
                 </main>
 
             </div>
