Added short commit hash in the footer in all pages

--- a/profile.html
+++ b/profile.html
@@ -376,7 +376,7 @@ Bootstrap 5 Dashboard Admin Template
                             <div class="row">
                                 <div class="col-lg-12 col-12">
                                     <p class="copyright-text">
-                                        Mini Finance v1.0 — Deployed on <span id="deploy-date"></span> — By Egwu Vincent Oko
+                                        Mini Finance v1.0 — Deployed on <span id="deploy-date"></span> — rev: <span id="commit-hash">d20bde5</span> — By Egwu Vincent Oko
                                     </p>
                                 </div>
                             </div>
